Project/movshare/static/css/project.css
/* These styles are generated from project.scss. */


/*########  This is my new stuff  ########*/





/*######################################*/
#content {
    display: flex;
    flex-direction: row;
}

#sidebar {
    display: flex;
    flex-direction: column;
    margin: 15px;
    border-radius: 15px;
    background-color: rgba(169,169,169, .2);
}

#main-content {
  display: flex;
  flex-direction: row;
  padding-left: 20px;
}


.alert-debug {
  color: black;
  background-color: white;
  border-color: #d6e9c6;
}

.alert-error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

#body-wrapper {
    display: flex;
    flex-direction: row;
    flex-basis: 100%;
    justify-content: space-between;
}

#sidebar-wrapper {
    display: flex;
    flex-direction: column;
    margin:10px;
}

#addMediaBlock{
    display: none;
}

#addShelfBlock{
    display:none;
}


.sidebar div .sidebar-content {
    padding: 6px 8px 6px 16px;
    display: block;
}

.hidden {
    block: hidden;
}



button.addX{
    display:flex;
    margin: 5px;
}

#shelf-wrapper {
    display: flex;
    flex-direction: column;
    text-align:center;
    overflow: hidden;
    max-width: 100%;
}



.shelf {
    display: flex;
    flex-direction: column;
}

.shelf-title {
    display: flex;
    flex-direction: row;
    min-width: min-content;
    justify-content: center;
}

.shelf-content {
    display: flex;
    flex-direction: row;
    overflow: scroll;
}

.underline {
    border-bottom: 1px dotted black;
    min-width: 90px;
}

.delete-shelf {
    display: flex;
    float:right;
}

.media-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 1.2;
    padding-bottom: 5px;
}
.media {
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    padding: 5px;
    margin: 4px;
    flex: 0 0 100px;
    align-items: center;
    text-align: center;
    height: 150px;
    max-width: 100px;
    

}

.media-table {

}
.media-table td, .media-table th {
    padding-left: 15px;
    min-width: 125px;
}


.url {
    text-align: right;
    padding-right: 10px;
}

.media-table tr:nth-child(even){

    background-color: rgba(169,169,169, .2);
}

